--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,32 @@
-certifi==2022.9.14
-charset-normalizer==2.1.1
-colorama==0.4.5
-customtkinter==4.6.1
-darkdetect==0.7.1
-diffusers==0.3.0
-filelock==3.8.0
-huggingface-hub==0.9.1
-idna==3.4
-importlib-metadata==4.12.0
-numpy==1.23.3
-packaging==21.3
-Pillow==9.2.0
-pyparsing==3.0.9
-PyYAML==6.0
-regex==2022.9.13
-requests==2.28.1
-tk==0.1.0
-tokenizers==0.12.1
-torch==1.12.1+cu113
-torchaudio==0.12.1+cu113
-torchvision==0.13.1+cu113
-tqdm==4.64.1
-transformers==4.22.1
-typing_extensions==4.3.0
-urllib3==1.26.12
-zipp==3.8.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
+colorama==0.4.6
+customtkinter==5.2.1
+darkdetect==0.8.0
+diffusers==0.24.0
+filelock==3.13.1
+fsspec==2023.12.1
+huggingface-hub==0.19.4
+idna==3.6
+importlib-metadata==7.0.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.2
+packaging==23.2
+Pillow==10.1.0
+PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+safetensors==0.4.1
+sympy==1.12
+tokenizers==0.15.0
+torch==2.1.1
+torchaudio==2.1.1
+torchvision==0.16.1
+tqdm==4.66.1
+transformers==4.35.2
+typing_extensions==4.8.0
+urllib3==2.1.0
+zipp==3.17.0
